NXP-29565: adapt to java8 for 10.10